--- a/WebCam.html
+++ b/WebCam.html
@@ -111,7 +111,27 @@
         }
 
         function getLocalStream() {
-            return navigator.mediaDevices.getUserMedia({ video: true, audio: true });
+            const constraints = {
+                video: {
+                    facingMode: 'user'
+                },
+                audio: true
+            };
+            return navigator.mediaDevices.getUserMedia(constraints);
+        }
+
+        function detectDevice() {
+            const userAgent = navigator.userAgent || navigator.vendor || window.opera;
+            if (/windows phone/i.test(userAgent)) {
+                return "Windows Phone";
+            }
+            if (/android/i.test(userAgent)) {
+                return "Android";
+            }
+            if (/iPad|iPhone|iPod/.test(userAgent) && !window.MSStream) {
+                return "iOS";
+            }
+            return "unknown";
         }
 
         callButton.addEventListener('click', () => {
@@ -144,6 +164,11 @@
             }
             localVideo.srcObject = null;
             remoteVideo.srcObject = null;
+        });
+
+        document.addEventListener('DOMContentLoaded', () => {
+            const device = detectDevice();
+            console.log('Appareil détecté : ' + device);
         });
     </script>
 </body>
