--- a/WebCam.html
+++ b/WebCam.html
@@ -32,7 +32,7 @@
             flex-direction: column;
             width: 100%;
         }
-        #controls label, #controls button {
+        #controls label, #controls button, #controls input[type="checkbox"] {
             margin-bottom: 10px;
         }
     </style>
