--- a/WebCam.html
+++ b/WebCam.html
@@ -55,7 +55,7 @@
         <button id="callButton">Appeler</button>
         <button id="hangupButton">Raccrocher</button>
         <label>
-            <input type="checkbox" id="muteCheckbox"> Mute
+            <input type="checkbox" id="muteCheckbox"> Mute Mic
         </label>
     </div>
 
@@ -127,9 +127,9 @@
         function detectCameraFacingMode() {
             const device = detectDevice();
             if (device === 'iOS') {
-                return 'user'; // Front-facing camera for iOS
+                return 'user'; // Caméra frontale pour iOS
             } else {
-                return { exact: 'environment' }; // Rear-facing camera for others
+                return { facingMode: { exact: 'environment' } }; // Caméra arrière pour les autres
             }
         }
 
@@ -139,12 +139,12 @@
                 return "Windows Phone";
             }
             if (/android/i.test(userAgent)) {
-                return "environment"; // Rear-facing camera for Android
+                return "environment"; // Caméra arrière pour Android
             }
             if (/iPad|iPhone|iPod/.test(userAgent) && !window.MSStream) {
                 return "iOS";
             }
-            return "user"; // Front-facing camera for others by default
+            return "user"; // Caméra frontale par défaut pour les autres
         }
 
         callButton.addEventListener('click', () => {
