--- a/WebCam.html
+++ b/WebCam.html
@@ -55,7 +55,7 @@
         <button id="callButton">Appeler</button>
         <button id="hangupButton">Raccrocher</button>
         <label>
-            <input type="checkbox" id="muteCheckbox"> Mute Micro
+            <input type="checkbox" id="muteCheckbox"> Mute Mic
         </label>
     </div>
 
@@ -99,6 +99,9 @@
                     .then((stream) => {
                         localStream = stream;
                         localVideo.srcObject = stream;
+                        if (muteCheckbox.checked) {
+                            toggleAudioMute();
+                        }
                         incomingCall.answer(stream);
                         incomingCall.on('stream', (remoteStream) => {
                             remoteVideo.srcObject = remoteStream;
@@ -124,9 +127,6 @@
             return navigator.mediaDevices.getUserMedia(constraints)
                 .then(stream => {
                     localStream = stream;
-                    if (muteCheckbox.checked) {
-                        toggleAudioMute();
-                    }
                     localVideo.srcObject = stream;
                     return stream;
                 })
@@ -141,7 +141,7 @@
             if (device === 'iOS') {
                 return 'user'; // Caméra frontale pour iOS
             } else {
-                return { facingMode: { exact: 'environment' } }; // Caméra arrière pour les autres
+                return { facingMode: 'environment' }; // Caméra arrière pour les autres
             }
         }
 
@@ -151,12 +151,12 @@
                 return "Windows Phone";
             }
             if (/android/i.test(userAgent)) {
-                return "environment"; // Caméra arrière pour Android
+                return "Android";
             }
             if (/iPad|iPhone|iPod/.test(userAgent) && !window.MSStream) {
                 return "iOS";
             }
-            return "user"; // Caméra frontale par défaut pour les autres
+            return "unknown";
         }
 
         function toggleAudioMute() {
