--- a/WebCam.html
+++ b/WebCam.html
@@ -55,7 +55,7 @@
         <button id="callButton">Appeler</button>
         <button id="hangupButton">Raccrocher</button>
         <label>
-            <input type="checkbox" id="muteCheckbox"> Mute
+            <input type="checkbox" id="muteCheckbox"> Mute Micro
         </label>
     </div>
 
@@ -132,28 +132,23 @@
         function detectCameraConstraints() {
             const device = detectDevice();
             let constraints = {
-                audio: true
+                audio: true,
+                video: true
             };
 
             if (device === 'iOS') {
                 // Pour iOS, essayons de sélectionner explicitement la caméra frontale
                 constraints.video = {
-                    width: { ideal: 1280 },
-                    height: { ideal: 720 },
                     facingMode: { exact: 'user' }
                 };
             } else if (device === 'Android') {
                 // Pour Android, sélectionnons la caméra arrière par défaut
                 constraints.video = {
-                    width: { ideal: 1280 },
-                    height: { ideal: 720 },
                     facingMode: { exact: 'environment' }
                 };
             } else {
                 // Par défaut, utilisons la caméra arrière pour d'autres appareils
                 constraints.video = {
-                    width: { ideal: 1280 },
-                    height: { ideal: 720 },
                     facingMode: 'environment'
                 };
             }
